# agent-mesh-protocol

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  spec_proposal.md
.github/workflows/: ci.yml
ampro/: __init__.py  addressing.py  agent_json_schema.py  api_key_store.py  attachment_types.py  audit_attestation.py  audit_logger.py  auth_methods.py  backpressure.py  body_schemas.py  callback_delivery.py  capabilities.py  certifications.py  challenge.py  circuit_breaker_types.py  compliance_middleware.py  compliance_types.py  concurrency_limiter.py  context_schema.py  cross_verification.py  data_residency.py  dedup.py  encryption.py  envelope.py  erasure_processor.py  erasure_propagation.py  errors.py  handshake.py  health_types.py  heartbeat.py  identity_link.py  identity_migration.py  identity_types.py  jurisdiction.py  key_revocation.py  message_middleware.py  message_types_registry.py  negotiation.py  presence_types.py  priority.py  (+21 more)
ampro/agent/: __init__.py  health.py  lifecycle.py  schema.py  tool_consent.py  visibility.py
ampro/ampi/: __init__.py  app.py  context.py  errors.py  types.py
ampro/client/: __init__.py  core.py  discover.py  errors.py  send.py  session.py  stream.py
ampro/compliance/: __init__.py  audit_attestation.py  audit_logger.py  consent_revoke.py  data_residency.py  erasure.py  erasure_auth.py  erasure_propagation.py  jurisdiction.py  middleware.py  pii_patterns.py  registry.py  types.py
ampro/core/: __init__.py  addressing.py  body_schemas.py  envelope.py  message_middleware.py  versioning.py
ampro/delegation/: __init__.py  chain.py  cost_receipt.py  tracing.py
ampro/identity/: __init__.py  cross_verification.py  link.py  migration.py  types.py
ampro/registry/: __init__.py  federation.py  search.py  types.py
ampro/security/: __init__.py  challenge.py  circuit_breaker.py  concurrency_limiter.py  dedup.py  encryption.py  key_revocation.py  nonce_tracker.py  rate_limit.py  rate_limiter.py  rfc9421.py  sender_tracker.py
ampro/server/: __init__.py  __main__.py  cli.py  core.py  test.py
ampro/session/: __init__.py  binding.py  handshake.py  presence.py  types.py
ampro/streaming/: __init__.py  auth.py  backpressure.py  bus.py  channel.py  checkpoint.py  events.py
ampro/transport/: __init__.py  api_key_store.py  attachment.py  callback.py  events.py  heartbeat.py  jwks_cache.py  negotiation.py  task_redirect.py  task_revoke.py
ampro/trust/: __init__.py  resolver.py  score.py  tiers.py  upgrade.py
ampro/wire/: __init__.py  body_type_map.py  config.py  endpoints.py  errors.py
docs/: ARCHITECTURE.md  EDGE-CASES.md  PROTOCOL-CONTRACTS.md  SECURITY-AUDIT-V2.md  SECURITY-AUDIT.md  SECURITY-MODEL.md  WIRE-BINDING.md
examples/: 01_minimum_viable_agent.py  02_fastapi_agent.py  03_trust_and_auth.py  04_addressing.py  05_body_schemas.py  06_delegation_chains.py  07_security.py  08_compliance.py  09_capability_negotiation.py  10_handshake.py  11_visibility.py  12_context_schema.py  13_key_revocation.py  14_challenge_response.py  15_tool_consent.py  16_backpressure.py  17_agent_lifecycle.py  18_cost_receipt.py  19_registry_search.py  20_load_redirect.py  21_tracing.py  22_task_revoke.py  23_jurisdiction.py  24_consent_revoke.py  25_stream_multiplexing.py  26_stream_checkpoint.py  27_identity_linking.py  28_agent_migration.py  29_encryption.py  30_trust_proof.py  31_simple_server.py  32_server_with_tools.py  33_server_with_auth.py  34_server_with_sessions.py  35_server_with_streaming.py  36_client_send_message.py  37_client_with_handshake.py  38_client_streaming.py  39_two_agents_talking.py  40_delegation_chain.py  (+6 more)
tests/: test_agent_lifecycle.py  test_agent_schema_migration_chain.py  test_ampi_app.py  test_ampi_cli.py  test_ampi_test_server.py  test_audit_append_only.py  test_audit_attestation.py  test_backpressure.py  test_budget_fail_closed.py  test_certifications.py  test_challenge.py  test_client.py  test_clock_skew.py  test_consent_revoke.py  test_context_schema.py  test_cost_receipt.py  test_cross_module_integration.py  test_data_residency.py  test_delegation_context_binding.py  test_encryption.py  test_erasure_propagation.py  test_error_hierarchy.py  test_exception_sanitization.py  test_federation_trust_proof_validation.py  test_field_length_limits.py  test_fix_agent_f3.py  test_handshake.py  test_identity_link.py  test_identity_migration.py  test_jurisdiction.py  test_jurisdiction_binding.py  test_jwt_alg_protection.py  test_key_revocation.py  test_monotonic_clock.py  test_priority.py  test_protocol.py  test_rate_limiter_bounds.py  test_registry_federation.py  test_registry_federation_extensions.py  test_registry_search.py  (+25 more)
tests/ampi/: test_context.py  test_errors.py  test_test_server.py
tests/compliance/: conftest.py  test_content_classification.py  test_data_residency_known_regions.py  test_data_residency_transit.py  test_erasure_auth.py  test_erasure_retry.py  test_jurisdiction_transfers.py  test_minor_protection.py  test_registry.py  test_retained_record.py
tests/core/: test_addressing.py  test_envelope.py  test_versioning.py
tests/delegation/: test_cost_receipt_signatures.py
tests/fixtures/: test-keypair.json
tests/identity/: test_migration_proof.py
tests/session/: test_handshake_replay.py
tests/trust/: test_did_key_verification.py
tests/vectors/: README.md  addressing.json  agent_lifecycle.json  audit_attestation.json  backpressure.json  body_types.json  certifications.json  challenge.json  consent_revoke.json  context_schema.json  cost_receipt.json  data_residency.json  delegation_chain.json  encryption.json  envelope.json  erasure_propagation.json  handshake.json  headers.json  identity_link.json  identity_migration.json  (+15 more)
