[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ampro"
version = "0.3.1"
description = "Universal agent-to-agent communication protocol — agent:// addressing, trust tiers, delegation chains, compliance"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "AMP Contributors", email = "contributors@amp-protocol.dev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "cryptography>=41.0",
    "base58>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
ampro-server = "ampro.server.cli:main"

[project.urls]
Homepage = "https://github.com/vesakri/agent-mesh-protocol"
Repository = "https://github.com/vesakri/agent-mesh-protocol"
Issues = "https://github.com/vesakri/agent-mesh-protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["ampro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
