[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ampro"
version = "0.3.3"
description = "Universal agent-to-agent communication protocol — agent:// addressing, trust tiers, delegation chains, compliance"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "AMP Contributors", email = "contributors@amp-protocol.dev" },
]
keywords = ["agent", "protocol", "a2a", "mesh", "ampro", "ampi", "rfc9421", "agent-mesh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "cryptography>=41.0",
    "base58>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
ampro-server = "ampro.server.cli:main"

[project.urls]
Homepage = "https://github.com/vesakri/agent-mesh-protocol"
Repository = "https://github.com/vesakri/agent-mesh-protocol"
Issues = "https://github.com/vesakri/agent-mesh-protocol/issues"
Documentation = "https://github.com/vesakri/agent-mesh-protocol/blob/main/docs/WIRE-BINDING.md"

[tool.hatch.build.targets.wheel]
packages = ["ampro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Baseline rules for 0.3.x. We run pycodestyle (E/W), pyflakes (F), and
# isort (I). pyupgrade (UP) is intentionally omitted — the codebase is
# gradually adopting `X | Y` unions; enabling UP en bloc would churn
# hundreds of lines with no behaviour change. Revisit for 1.0.
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # long lines ok in docstrings + vector fixtures
    "E402",  # module-level imports not at top — used deliberately for
             # lazy-registered globals (see trust/resolver.py).
    "F401",  # unused imports — server adapter fallback imports need to
             # test for a framework's presence without touching the name.
]

[tool.ruff.lint.per-file-ignores]
# Tests routinely build up fixtures as scaffolding for assertions later
# in the file, and read naturally even when the variable is only used
# for its side effects (e.g. minting a keypair). ``lambda``-assignment
# is allowed for single-line test helpers.
"tests/**/*.py" = ["F841", "E731"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
